--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "google-spreadsheet": "^3.1.15",
     "js-cookie": "^3.0.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.5.0",
+    "nodemon": "^2.0.12",
     "prettier": "^2.1.2",
     "vue-jest": "^3.0.4"
   }
