--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "encoding": "^0.1.13",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "google-spreadsheet": "^3.1.15",
