--- a/my_smart_home_web/package.json
+++ b/my_smart_home_web/package.json
@@ -27,7 +27,8 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/pwa": "^3.0.2",
     "core.js": "^0.4.2",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-burger-menu": "^2.0.5"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
